Dodanie testów jednostkowych + DateService, dodanie bibliotek Mockito (#6)